--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,9 @@
 ### Python template
 
+deploy/
 .idea/
 .vscode/
+.git/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -109,6 +111,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+.env
 .venv
 env/
 venv/
